--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
 	</footer>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="lightbox2/js/lightbox.min.js" type="text/javascript"></script>
+	<script src="Scripts/scripts.js" type="text/javascript"></script>
 </body>
 </html>
