--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/3.0.3/normalize.css">
-	<link rel="stylesheet" type="text/css" href="lightbox2/css/lightbox.min.css">
-	<link rel="stylesheet" type="text/css" href="Styles/styles.css">
+	<!-- <link rel="stylesheet" type="text/css" href="lightbox2/css/lightbox.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="Styles/styles.css"> 
 	<title>Interactive Photo Gallery</title>
 </head>
 <body>
@@ -78,7 +78,7 @@
 	<footer class="main-footer">
 	</footer>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="lightbox2/js/lightbox.min.js" type="text/javascript"></script>
+	<!-- <script src="lightbox2/js/lightbox.min.js" type="text/javascript"></script> -->
 	<script src="Scripts/scripts.js" type="text/javascript"></script>
 </body>
 </html>
