fixed filtered grid
fixed filter function so that the wrapping .thumbnail div, rather than
the image itself, is hidden by the search filter. This keeps the grid
intact when there are fewer than the maximum photos displayed.

played with lightbox arrow positioning without finding a solution

--- a/index.html
+++ b/index.html
@@ -14,63 +14,63 @@
 	</header>
 	<div class="gallery">
 		<div class="thumbnail">
-			<a href="Photos/01.jpg" data-lightbox="roadtrip" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
-			<img src="Photos/Thumbnails/01.jpg" id="hay_bales" alt="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
+			<a href="Photos/01.jpg"> 
+				<img src="Photos/Thumbnails/01.jpg" id="hay_bales" alt="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
 			</a>
 		</div>
 		<div class="thumbnail">
-			<a href="Photos/02.jpg" data-lightbox="roadtrip" data-title="The lake was so calm today. We had a great view of the snow on the mountains from here.">
-			<img src="Photos/Thumbnails/02.jpg" id="lake" alt="The lake was so calm today. We had a great view of the snow on the mountains from here.">
+			<a href="Photos/02.jpg"> 
+				<img src="Photos/Thumbnails/02.jpg" id="lake" alt="The lake was so calm today. We had a great view of the snow on the mountains from here.">
 			</a>
 		</div>
 		<div class="thumbnail">
-			<a href="Photos/03.jpg" data-lightbox="roadtrip" data-title="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
-			<img src="Photos/Thumbnails/03.jpg" id="canyon" alt="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
+			<a href="Photos/03.jpg"> 
+				<img src="Photos/Thumbnails/03.jpg" id="canyon" alt="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
 			</a>
 		</div>
 		<div class="thumbnail">
-			<a href="Photos/04.jpg" data-lightbox="roadtrip" data-title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
-			<img src="Photos/Thumbnails/04.jpg" id="iceberg" alt="It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
+			<a href="Photos/04.jpg"> 
+				<img src="Photos/Thumbnails/04.jpg" id="iceberg" alt="It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
 			</a>
 		</div>
 		<div class="thumbnail">
-			<a href="Photos/05.jpg" data-lightbox="roadtrip" data-title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
-			<img src="Photos/Thumbnails/05.jpg" id="desert" alt="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
+			<a href="Photos/05.jpg"> 
+				<img src="Photos/Thumbnails/05.jpg" id="desert" alt="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
 			</a>
 		</div>
 		<div class="thumbnail">
-			<a href="Photos/06.jpg" data-lightbox="roadtrip" data-title="Fall is coming, I love when the leaves on the trees start to change color.">
-			<img src="Photos/Thumbnails/06.jpg" id="fall" alt="Fall is coming, I love when the leaves on the trees start to change color.">
+			<a href="Photos/06.jpg"> 
+				<img src="Photos/Thumbnails/06.jpg" id="fall" alt="Fall is coming, I love when the leaves on the trees start to change color.">
 			</a>
 		</div>
 		<div class="thumbnail">
-			<a href="Photos/07.jpg" data-lightbox="roadtrip" data-title="I drove past this plantation yesterday, everything is so green!">
-			<img src="Photos/Thumbnails/07.jpg" id="plantation" alt="I drove past this plantation yesterday, everything is so green!">
+			<a href="Photos/07.jpg"> 
+				<img src="Photos/Thumbnails/07.jpg" id="plantation" alt="I drove past this plantation yesterday, everything is so green!">
 			</a>
 		</div>
 		<div class="thumbnail">
-			<a href="Photos/08.jpg" data-lightbox="roadtrip" data-title="My summer vacation to the Oregon Coast. I love the sandy dunes!">
-			<img src="Photos/Thumbnails/08.jpg" id="dunes" alt="My summer vacation to the Oregon Coast. I love the sandy dunes!">
+			<a href="Photos/08.jpg"> 
+				<img src="Photos/Thumbnails/08.jpg" id="dunes" alt="My summer vacation to the Oregon Coast. I love the sandy dunes!">
 			</a>
 		</div>
 		<div class="thumbnail">
-			<a href="Photos/09.jpg" data-lightbox="roadtrip" data-title="We enjoyed a quiet stroll down this countryside lane.">
-			<img src="Photos/Thumbnails/09.jpg" id="countryside_lane" alt="We enjoyed a quiet stroll down this countryside lane.">
+			<a href="Photos/09.jpg"> 
+				<img src="Photos/Thumbnails/09.jpg" id="countryside_lane" alt="We enjoyed a quiet stroll down this countryside lane.">
 			</a>
 		</div>
 		<div class="thumbnail">
-			<a href="Photos/10.jpg" data-lightbox="roadtrip" data-title="Sunset at the coast! The sky turned a lovely shade of orange." id="sunset">
-			<img src="Photos/Thumbnails/10.jpg" id="sunset" alt="Sunset at the coast! The sky turned a lovely shade of orange.">
+			<a href="Photos/10.jpg"> 
+				<img src="Photos/Thumbnails/10.jpg" id="sunset" alt="Sunset at the coast! The sky turned a lovely shade of orange.">
 			</a>
 		</div>
 		<div class="thumbnail">
-			<a href="Photos/11.jpg" data-lightbox="roadtrip" data-title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
-			<img src="Photos/Thumbnails/11.jpg" id="cave" alt="I did a tour of a cave today and the view of the landscape below was breathtaking.">
+			<a href="Photos/11.jpg"> 
+				<img src="Photos/Thumbnails/11.jpg" id="cave" alt="I did a tour of a cave today and the view of the landscape below was breathtaking.">
 			</a>
 		</div>
 		<div class="thumbnail">
-			<a href="Photos/12.jpg" data-lightbox="roadtrip" data-title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
-			<img src="Photos/Thumbnails/12.jpg" id="bluebells" alt="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
+			<a href="Photos/12.jpg">
+				<img src="Photos/Thumbnails/12.jpg" id="bluebells" alt="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
 			</a>
 		</div>
 	</div>
