--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 				<img src="Photos/Thumbnails/12.jpg" id="bluebells" alt="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
 			</a>
 		</div>
+		<div class="video-thumbnail">
+			<a href="Photos/Thumbnails/CR18.jpg">
+				<img src="Photos/Thumbnails/CR18.jpg" id="criticalrole" alt="Critical Role RPG Show: Episode 18 Trial of the Take Part 1.">
+			</a>
+		</div>
 	</div>
 	<footer class="main-footer">
 	</footer>
