fixed header and youtube
set header to fixed position

added a youtube video thumbnail. works but still need to work on styles
and integrating it with the other thumbnails so it can be included in
lightbox navigation

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 	<title>Interactive Photo Gallery</title>
 </head>
 <body>
-	<header>
-		<div class="main-header">
+	<header class="main-header">
 			<input class="search" type="text" name="user_search">
-		</div>
 	</header>
 	<div class="gallery">
 		<div class="thumbnail">
@@ -74,8 +72,8 @@
 			</a>
 		</div>
 		<div class="video-thumbnail">
-			<a href="Photos/Thumbnails/CR18.jpg">
-				<img src="Photos/Thumbnails/CR18.jpg" id="criticalrole" alt="Critical Role RPG Show: Episode 18 Trial of the Take Part 1.">
+			<a href="https://www.youtube.com/watch?v=8rFG-Uk4hZs">
+				<img src="Photos/Thumbnails/traps thumbnail.jpg" id="criticalrole" alt="Critical Role RPG Show: Episode 18 Trial of the Take Part 1.">
 			</a>
 		</div>
 	</div>
