--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<img src="Photos/Thumbnails/12.jpg" id="bluebells" alt="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
 			</a>
 		</div>
-		<div class="video-thumbnail">
+		<div class="thumbnail video-thumbnail">
 			<a href="https://www.youtube.com/watch?v=8rFG-Uk4hZs">
 				<img src="Photos/Thumbnails/traps thumbnail.jpg" id="criticalrole" alt="Critical Role RPG Show: Episode 18 Trial of the Take Part 1.">
 			</a>
