--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 			</a>
 		</div>
 		<div class="thumbnail video-thumbnail">
-			<a href="https://www.youtube.com/watch?v=8rFG-Uk4hZs">
-				<img src="Photos/Thumbnails/traps thumbnail.jpg" id="criticalrole" alt="Critical Role RPG Show: Episode 18 Trial of the Take Part 1.">
+			<a href="https://www.youtube.com/embed/8rFG-Uk4hZs">
+				<img src="Photos/Thumbnails/traps-thumbnail.jpg" id="traps" alt="Beer Pinata by The Traps">
 			</a>
 		</div>
 	</div>
